--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ a, a:hover {
 				href="https://g.page/reflectionphotography_studio"><img border="0" vspace="0" hspace="0"
 				src="http://drive.google.com/uc?export=view&id=1SvxiFPVgnNbGoCYL0gwALY2rEoAIwhN2"
 				width="250" height="auto"
-				alt="Logo" title="Logo" style="
+				alt="Logo" title="Hello..." style="
 				color: #FFFFFF;
 				font-size: 10px; margin: 0; padding: 0; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; border: none; display: block;" /></a>
 
@@ -70,10 +70,10 @@ a, a:hover {
 
 		<tr>
                     <td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0 0 0 10px; padding-bottom: 0px;
-			padding-top: 30px; font-size: 20px; font-weight: 300; line-height: 160%;
+			padding-top: 30px; font-size: 15px; font-weight: 300; line-height: 160%;
 			color: #666666;
 			letter-spacing: 1.5px;
-			font-family: 'Source Sans Pro', sans-serif;"><img src="http://drive.google.com/uc?export=view&id=1801vX3TxQ_UQjs1Irsd0ientrd6nK5Kx" alt="Yth" style="max-width: 70px; vertical-align: -15px;" ><em>      &nbsp;	Customer !</em></td>
+			font-family: 'Source Sans Pro', sans-serif;"><img src="http://drive.google.com/uc?export=view&id=1801vX3TxQ_UQjs1Irsd0ientrd6nK5Kx" alt="Yth" style="max-width: 70px; vertical-align: -15px;" ><em>      &nbsp;	Customer </em>...</td>
 		</tr>
  
 	<!-- SUPHEADER -->
@@ -91,13 +91,12 @@ a, a:hover {
 	<!-- PARAGRAPH -->
 	<!-- Set text color and font family ("sans-serif" or "Georgia, serif"). Duplicate all text styles in links, including line-height -->
 	<tr>
-		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 4%; padding-right: 4%; width: 87.5%; font-size: 17px; font-weight: 300; line-height: 160%;
+		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 4%; padding-right: 4%; width: 87.5%; font-size: 14px; font-weight: 300; line-height: 160%;
 			padding-top: 20px; 
 			color: #666666;
 			letter-spacing: 1.5px;
 			font-family: 'Source Sans Pro', sans-serif;" class="paragraph">
-				We are about &nbsp;to tell you that&nbsp;during <strong>February</strong> we&nbsp;have special deal!&nbsp; Grab it now&nbsp;and get discount<br>
-				&nbsp;up to <strong>20%</strong>&nbsp;for&nbsp;<strong>all Family Package</strong>&nbsp;.
+				Thank you for your trust towards us and we have special offers for your next level of life. Celebrate your special moment with limited offer <strong>Prewedding</strong> and <strong>Wedding Package</strong>.<br>
 	        <p align="center">
 		        siencerly, Reflection Photography —</p>
 		</td>
@@ -107,7 +106,7 @@ a, a:hover {
 	<!-- Image text color should be opposite to background color. Set your url, image src, alt and title. Alt text should fit the image size. Real image size should be x2 (wrapper x2). Do not set height for flexible images (including "auto"). URL format: http://domain.com/?utm_source={{Campaign-Source}}&utm_medium=email&utm_content={{Ìmage-Name}}&utm_campaign={{Campaign-Name}} -->
 	<tr>
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0;
-			padding-top: 0px;" class="cover"><a target="_blank" style="text-decoration: none;" href="https://g.page/reflectionphotography_studio"><img border="0" vspace="0" hspace="0" src="http://drive.google.com/uc?export=view&id=1eZBRIWT9TcWtuxooxySPwbhJGrmobIhG" style="
+			padding-top: 0px;" class="cover"><a target="_blank" style="text-decoration: none;" href="https://g.page/reflectionphotography_studio"><img border="0" vspace="0" hspace="0" src="http://drive.google.com/uc?export=view&id=1zu0ZR_cDo_c8Vz2vHQj0SBzIYuYLmyIK" style="
 			width: 75%; max-width: 500px;
 			color: #FFFFFF; font-size: 13px; margin: 0; padding-top: 40px; padding-bottom: 40px; outline: none; text-decoration: none; border: none; display: block;"></a></td>
 	</tr>
