--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ a, a:hover {
 			padding-top: 25px;
 			color: #666666;
 			font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; font-style: normal;" class="supheader">
-				INTRODUCING OUR LATEST PROMO AT THE MOMENT !
+				IT'S BEEN A WHILE, YOU ARE TAKING PHOTO WITH US AFTER GRADUATION PHOTO SESSION
 		</td>
 	</tr>
 
